# Hermes422Repro

./: .gitignore  App.js  README.md  app.json  package.json
android/: settings.gradle
android/app/: _BUCK  build.gradle
android/app/src/debug/java/com/hermes422repro/: ReactNativeFlipper.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  hermes422repro.cpp
android/app/src/main/java/com/hermes422repro/: Hermes422Module.java  Hermes422Package.java  MainActivity.java  MainApplication.java
android/app/src/main/res/values/: strings.xml
ios/: Podfile
ios/Hermes422Repro/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
ios/Hermes422Repro.xcodeproj/: project.pbxproj
ios/Hermes422Repro.xcodeproj/xcshareddata/xcschemes/: Hermes422Repro.xcscheme
ios/Hermes422Repro.xcworkspace/: contents.xcworkspacedata
ios/Hermes422ReproTests/: Hermes422ReproTests.m
